--- a/src/tpoFrontend/frontendTPO/index.html
+++ b/src/tpoFrontend/frontendTPO/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon"  href="../frontendTPO/src/assets/logo.svg" />
+    <link rel="icon"  href="/favicon.ico.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda online</title>
   </head>
