--- a/src/tpoFrontend/frontendTPO/index.html
+++ b/src/tpoFrontend/frontendTPO/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon"  href="/favicon.ico.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tienda online</title>
+    <title>TiendaOnlineSaludable</title>
   </head>
   <body>
     <div id="root"></div>
