--- a/src/tpoFrontend/frontendTPO/index.html
+++ b/src/tpoFrontend/frontendTPO/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon"  href="/favicon.ico.jpg" />
+    <link rel="icon"  href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TiendaOnlineSaludable</title>
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
